Fix overwrite identification number when user register for notification add ranking for identification number by subject group and local